<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="80dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/welcome_to_my_comics_app"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/please_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcome_text"
        android:text="@string/please_login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="420dp"
        android:layout_height="48dp"
        android:layout_below="@+id/please_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="420dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/username_field"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/registration_blurb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/registration_blurb"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/other_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_blurb"
        android:layout_marginTop="25dp"
        android:baselineAligned="false">

        <Button
            android:id="@+id/register_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/register"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/red"/>

        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/forgot_password"
            android:backgroundTint="@color/red"
            />

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/other_buttons"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:backgroundTint="@color/red" />

</RelativeLayout>

